...
                    android:inputType="textEmailAddress"
                    android:textColor="#EFEBEB"
                    android:textColorHint="#EFEBEB"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send Reset Link"
                android:textColor="#4a7c6f"
                android:backgroundTint="#EFEBEB"
                android:paddingLeft="40dp"
...
