...
                        android:inputType="textPassword"
                        android:textColor="#EFEBEB"
                        android:textColorHint="#80FFFFFF"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create Account"
                    android:textColor="#4a7c6f"
                    android:backgroundTint="#EFEBEB"
                    android:paddingLeft="40dp"
...
