<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".StudentProfileActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#578974">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="#4A7563">

                <ImageView
                    android:id="@+id/btn_hamburger"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@android:drawable/ic_menu_sort_by_size"
                    app:tint="#EFEBEB" />

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingHorizontal="28dp"
                    android:paddingBottom="24dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/profile_image"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="10dp"
                        android:padding="2dp"
                        android:scaleType="centerCrop"
                        android:src="@android:drawable/sym_def_app_icon"
                        app:shapeAppearanceOverlay="@style/CircleImage"
                        app:strokeColor="#EFEBEB"
                        app:strokeWidth="3dp" />

                    <TextView
                        android:id="@+id/student_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="Student Name"
                        android:textColor="#EFEBEB"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_student_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="Add a bio..."
                        android:inputType="textMultiLine"
                        android:textColor="#EFEBEB"
                        android:textColorHint="#C0EFEBEB"
                        android:textSize="14sp"
                        android:alpha="0.9"
                        android:layout_marginTop="4dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="start"
                        android:text="ACADEMIC LEVEL"
                        android:textStyle="bold"
                        android:textColor="#EFEBEB"
                        android:textSize="14sp"
                        android:letterSpacing="0.05"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        app:cardBackgroundColor="#C8D6CF"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">
                        <EditText
                            android:id="@+id/et_academic_level"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="E.g. Undergraduate, High School..."
                            android:padding="10dp"
                            android:textColor="#578974"
                            android:textColorHint="#80578974"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="start"
                        android:text="LEARNING GOALS"
                        android:textStyle="bold"
                        android:textColor="#EFEBEB"
                        android:textSize="14sp"
                        android:letterSpacing="0.05"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        app:cardBackgroundColor="#C8D6CF"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">
                        <EditText
                            android:id="@+id/et_learning_goals"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="E.g. Improve Math grades, Learn Python..."
                            android:padding="10dp"
                            android:textColor="#578974"
                            android:textColorHint="#80578974"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:inputType="textMultiLine" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="start"
                        android:text="LEARNING PREFERENCE"
                        android:textStyle="bold"
                        android:textColor="#EFEBEB"
                        android:textSize="14sp"
                        android:letterSpacing="0.05"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        app:cardBackgroundColor="#C8D6CF"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">
                        <EditText
                            android:id="@+id/et_learning_preference"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="E.g. Online, Visual..."
                            android:padding="10dp"
                            android:textColor="#578974"
                            android:textColorHint="#80578974"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="start"
                        android:text="COURSES (Comma separated)"
                        android:textStyle="bold"
                        android:textColor="#EFEBEB"
                        android:textSize="14sp"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        app:cardBackgroundColor="#C8D6CF"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp">
                        <EditText
                            android:id="@+id/et_courses_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="E.g. CS101, MATH202..."
                            android:padding="10dp"
                            android:textColor="#578974"
                            android:textColorHint="#80578974"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_courses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">
                    </com.google.android.material.chip.ChipGroup>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save_student_profile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:text="Save Profile Changes"
                        android:textColor="#578974"
                        android:textStyle="bold"
                        app:backgroundTint="#C8D6CF"
                        app:cornerRadius="12dp" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_find_tutor"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginBottom="30dp"
                android:text="Find a Tutor"
                android:textColor="#578974"
                android:textStyle="bold"
                app:backgroundTint="#C8D6CF"
                app:cornerRadius="14dp" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        app:elevation="0dp">
        <FrameLayout
            android:id="@+id/menu_container"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp" />
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>